Make sure that serivce account -1 is created with full permission for test and dev

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,7 +15,7 @@ services:
       - "8010:80"
     environment:
       DEV_RUN: "true"
-      TEST_SERVICE_TOKEN:
+      TEST_SERVICE_TOKEN: "${TEST_SERVICE_TOKEN}"
 
   email-dispatcher:
     volumes:
