--- a/public/ts/tsconfig.json
+++ b/public/ts/tsconfig.json
@@ -8,7 +8,7 @@
         "esModuleInterop": true,
         "sourceMap": true,
         "moduleResolution": "node",
-        "jsx": "react",
+        "jsx": "react-jsx",
         "jsxImportSource": "preact",
         "strict": true
     },
