--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       MYSQL_PORT:
       MYSQL_USER:
       MYSQL_PASS:
+      ELKS46_API_USER:
+      ELKS46_API_KEY:
       HOST_PUBLIC:
       HOST_FRONTEND:
       VIRTUAL_HOST: "${HOST_BACKEND}"
