Added accessy syncer as a docker container.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,6 +20,10 @@ services:
   email-dispatcher:
     volumes:
       - ./api/src:/work/src
+
+  accessy-syncer:
+    volumes:
+      - ./api/src:/work/src
       
   public:
     build:
