--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,6 +5,8 @@ services:
   db2:
     volumes:
       - logs:/var/www/html/storage/logs
+    ports:
+      - "3307:3306"
       
   api:
     volumes:
