Implementation done, test cases needed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,8 +95,8 @@ services:
       HOST_FRONTEND:
       ACCESSY_CLIENT_ID:
       ACCESSY_CLIENT_SECRET:
-      ACCESSY_LAB_ACCESS_GROUP:
-      ACCESSY_SPECIAL_ACCESS_GROUP:
+      ACCESSY_LABACCESS_GROUP:
+      ACCESSY_SPECIAL_LABACCESS_GROUP:
       ACCESSY_DO_MODIFY:
     depends_on:
       - api
