--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -72,6 +72,8 @@ services:
       TEST_PARALELLISM:
       SELENIUM_BASE_TIMEOUT:
       SELENIUM_SCREENSHOT_DIR: "/work/.test/selenium-screenshots"
-      
+      ACCESSY_LABACCESS_GROUP: "00000000-0000-0000-0000-000000000000"
+      ACCESSY_SPECIAL_LABACCESS_GROUP: "00000000-0000-0000-0000-000000000001"
+
 volumes:
   logs:
