--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -18,7 +18,7 @@ Phonenumbers
 schedule
 
 # Test requirements
-pytest
-pytest-parallel
+pytest<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
+pytest-parallel<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
 selenium
 faker
