Trying to upgrade everything, js tests does not work.

--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -1,4 +1,10 @@
 {
+    "exclude": [
+        "node_modules/**/*.d.ts",
+    ],
+    "include": [
+        "src/**/*.ts", "src/**/*.tsx"
+    ],
     "compilerOptions": {
         "target": "es6",
         "lib": ["es5", "es6", "dom"],
