--- a/admin/package.json
+++ b/admin/package.json
@@ -41,10 +41,11 @@
     "eslint": "^7.24.0",
     "eslint-plugin-react": "^7.23.2",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "react-test-renderer": "^16.14.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^9.4.2",
-    "typescript": "4.2.3",
+    "typescript": "4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
