Did not fix test errors.

--- a/api/src/pytest.ini
+++ b/api/src/pytest.ini
@@ -4,3 +4,4 @@ filterwarnings =
     ignore::DeprecationWarning:rocky.config
     # selenium not closed in some test, not sure why
     ignore:.*4444.*:ResourceWarning:selenium.webdriver.remote.remote_connection
+    ignore:.*not compatible with SQLAlchemy 2.0.*:DeprecationWarning:
