WIP on subscriptions.

--- a/mypy.ini
+++ b/mypy.ini
@@ -6,3 +6,4 @@ disallow_untyped_calls = True
 disallow_incomplete_defs = True
 strict_optional = True
 check_untyped_defs = True
+enable_incomplete_feature=Unpack
