--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -18,7 +18,8 @@ Phonenumbers
 schedule
 python-dateutil
 types-python-dateutil
-
+types-sqlalchemy
+sqlalchemy-stubs
 # Test requirements
 pytest<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
 pytest-parallel<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
