Add types for sqlalchemy.

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -16,7 +16,8 @@ ipython
 Pillow
 Phonenumbers
 schedule
-
+types-sqlalchemy
+sqlalchemy-stubs
 # Test requirements
 pytest<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
 pytest-parallel<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
