--- a/api/src/pytest.ini
+++ b/api/src/pytest.ini
@@ -5,3 +5,7 @@ filterwarnings =
     # selenium not closed in some test, not sure why
     ignore:.*4444.*:ResourceWarning:selenium.webdriver.remote.remote_connection
     ignore:.*not compatible with SQLAlchemy 2.0.*:DeprecationWarning:
+log_cli = 1
+log_cli_level = INFO
+; log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
+log_cli_date_format=%Y-%m-%d %H:%M:%S
