Use sqlalchemy plugin for mypy.

--- a/mypy.ini
+++ b/mypy.ini
@@ -7,3 +7,4 @@ disallow_incomplete_defs = True
 strict_optional = True
 check_untyped_defs = True
 enable_incomplete_feature=Unpack
+plugins = sqlmypy
