WIP on frontend subscription UI.

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -20,6 +20,8 @@ python-dateutil
 types-python-dateutil
 types-sqlalchemy
 sqlalchemy-stubs
+dataclasses_json
+
 # Test requirements
 pytest<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
 pytest-parallel<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
