--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -19,6 +19,8 @@ schedule
 python-dateutil
 types-python-dateutil
 
+dataclasses_json
+
 # Test requirements
 pytest<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
 pytest-parallel<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
