--- a/public/package.json
+++ b/public/package.json
@@ -6,6 +6,8 @@
     "repository": "https://github.com/makerspace/makeradmin",
     "license": "GPL-3.0",
     "devDependencies": {
+        "@types/d3": "^7.4.0",
+        "@types/d3-sankey": "^0.12.1",
         "sass-loader": "^10.0.0",
         "ts-loader": "^9.4.2",
         "typescript": "^4.9.4",
@@ -18,6 +20,8 @@
         "@types/markdown-it": "^12.2.1",
         "@types/stripe-v3": "^3.1.23",
         "chart.js": "^2.9.4",
+        "d3": "^7.8.3",
+        "d3-sankey": "^0.12.3",
         "markdown-it": "^12.2.0",
         "npm": "^9.2.0",
         "preact": "^10.5.13"
