--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -62,6 +62,7 @@ services:
       MYSQL_USER:
       MYSQL_PASS:
       WEBDRIVER_TYPE: "REMOTE_CHROME"
+      TEST_IS_INSIDE_DOCKER: "true"
       TEST_SERVICE_TOKEN:
       HOST_FRONTEND: 'http://admin'
       HOST_BACKEND: 'http://api'
