--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -16,6 +16,7 @@ ipython
 Pillow
 Phonenumbers
 schedule
+graypy
 
 # Test requirements
 pytest<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
