--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
     image: mysql:8.0.33
     # The lumen library seems to use an older mysql client which is not able to connect if mysql uses the newer caching_sha2_password authentication plugin.
     # Therefore we need to override the mysql starting command to set a config option to use the older password authentication plugin.
-    command: mysqld --default-authentication-plugin=mysql_native_password
+    command: bash -c "chmod -R 0777 /var/www/html/storage/logs && exec mysqld --default-authentication-plugin=mysql_native_password"
     volumes:
       - dbdata:/var/lib/mysql
+      - ./data/mysql_conf:/etc/mysql/conf.d
       - ./logs/mysql:/var/www/html/storage/logs
     environment:
       # Note: the config only seems to be updated when the container is initially created.
