--- a/public/package.json
+++ b/public/package.json
@@ -24,7 +24,9 @@
         "d3-sankey": "^0.12.3",
         "markdown-it": "^12.2.0",
         "npm": "^9.2.0",
-        "preact": "^10.5.13"
+        "preact": "^10.15.1",
+        "preact-compat": "^3.19.0",
+        "react-calendly": "^4.1.1"
     },
     "scripts": {
         "build": "./node_modules/.bin/webpack",
