--- a/public/ts/tsconfig.json
+++ b/public/ts/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es6",
-        "lib": ["es5", "es6", "dom"],
+        "lib": ["es5", "es6", "es2019", "dom"],
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
@@ -10,7 +10,13 @@
         "moduleResolution": "node",
         "jsx": "react-jsx",
         "jsxImportSource": "preact",
-        "strict": true
+        "strict": true,
+        "skipLibCheck": true,
+        "baseUrl": "../",
+        "paths": {
+            "react": ["./node_modules/preact/compat/"],
+            "react-dom": ["./node_modules/preact/compat/"]
+        }
     },
     "include": [
         "*.ts", "*.tsx"
