--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -23,3 +23,4 @@ pytest<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version 
 pytest-parallel<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove version limitation when fixed
 selenium
 faker
+dataclasses_json
