--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
   "python.linting.mypyEnabled": true,
-  "python.formatting.blackArgs": ["--line-length 120"],
-  "python.formatting.provider": "black"
+  "python.formatting.provider": "none",
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  },
+  "editor.formatOnSave": true,
+  "black-formatter.args": [
+    "--line-length",
+    "120"
+  ],
 }
