Forward ADMIN_EMAIL config option to containers.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       STRIPE_PRIVATE_KEY:
       STRIPE_PUBLIC_KEY:
       STRIPE_SIGNING_SECRET:
+      ADMIN_EMAIL:
       CORS_ALLOWED_ORIGINS:
       ACCESSY_CLIENT_ID:
       ACCESSY_CLIENT_SECRET:
