Install directly from package-lock.json
This makes sure that everyone gets the same packages when installing npm

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -10,7 +10,7 @@ COPY ./webpack.config.js ./tsconfig.json ./package.json ./package-lock.json /wor
 
 WORKDIR /work
 
-RUN npm install
+RUN npm ci
 
 COPY ./src/ /work/src
 COPY ./jestSetup.js /work/
