Render the actual error
Instead of just showing "Error: Could not load member info", now it
actually shows what the error is, like if the Stripe products have not
been set up.

--- a/public/package.json
+++ b/public/package.json
@@ -25,6 +25,7 @@
         "markdown-it": "^12.2.0",
         "npm": "^9.2.0",
         "preact": "^10.15.1",
+        "preact-render-to-string": "^6.3.1",
         "react-calendly": "^4.1.1"
     },
     "scripts": {
