--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     },
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
-    "black-formatter.args": ["--line-length", "120"]
+    "black-formatter.args": ["--line-length", "120"],
+    "ruff.format.args": ["--line-length", "120"]
 }
