Make sure the same prettier version is installed in CI

--- a/.github/workflows/check-formatting.yml
+++ b/.github/workflows/check-formatting.yml
@@ -41,7 +41,7 @@ jobs:
           cache: "npm"
       - name: Install packages
         run: |
-          npm install -g prettier
+          npm ci
       - name: Check formatting
         run: |
           npx prettier --check .
