Add possibility to create admin user from .env during firstrun

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,10 @@ services:
       ACCESSY_LABACCESS_GROUP:
       ACCESSY_SPECIAL_LABACCESS_GROUP:
       ACCESSY_DO_MODIFY:
+      FIRSTRUN_AUTO_ADMIN_FIRSTNAME:
+      FIRSTRUN_AUTO_ADMIN_LASTNAME:
+      FIRSTRUN_AUTO_ADMIN_EMAIL:
+      FIRSTRUN_AUTO_ADMIN_PASSWORD:
 
   email-dispatcher:
     image: makeradmin/api:1.0
