Enable passing pytest opts

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -73,6 +73,7 @@ services:
       SELENIUM_SCREENSHOT_DIR: "/work/.test/selenium-screenshots"
       ACCESSY_LABACCESS_GROUP: "00000000-0000-0000-0000-000000000000"
       ACCESSY_SPECIAL_LABACCESS_GROUP: "00000000-0000-0000-0000-000000000001"
+      PYTEST_ADDOPTS:
 
 volumes:
   logs:
