--- a/admin/package.json
+++ b/admin/package.json
@@ -12,6 +12,7 @@
         "jquery": "^3.6.0",
         "json-loader": "^0.5.4",
         "npm": "^10.5.2",
+        "preact-render-to-string": "^6.5.5",
         "prop-types": "^15.7.2",
         "react": "^16.14.0",
         "react-day-picker": "^7.4.10",
