--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -18,6 +18,9 @@ schedule
 python-dateutil
 types-python-dateutil
 types-sqlalchemy
+types-requests
+types-markdown
+types-PyMySQL
 sqlalchemy-stubs
 markdown
 
