--- a/.github/workflows/check-formatting.yml
+++ b/.github/workflows/check-formatting.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install packages
         run: |
           python -m pip install --upgrade pip
-          pip install --user ruff
+          pip install --user ruff==0.6.9
       - name: Check formatting
         run: |
           ruff ${{ matrix.ruff_args }}
