moved mkdocs.yml to the docs directory
Modified the github actions workflow to work with that
Added ./site to gitignore to avoid unwanted files to the repo
Added a make rule to preview and work with the doc (it uses docker to
avoid setting up a python environment)

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,7 +19,7 @@ jobs:
       - run: pip install mkdocs==1.6.1
       - name: Build docs
         shell: sh
-        run: mkdocs build
+        run: mkdocs build -f ./docs/mkdocs.yml
 
       - name: Upload Artifact
         uses: actions/upload-pages-artifact@v3
