--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
     networks:
       - makeradmin
     environment:
+      PYTHONWARNINGS: "always::DeprecationWarning"
+      SQLALCHEMY_WARN_20: "1"
       MYSQL_HOST: db2
       MYSQL_DB:
       MYSQL_PORT:
