--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,7 +1,7 @@
 name: Publish docs via GitHub Pages
 on:
   push:
-    branches: [master, main]
+    branches: [main]
 jobs:
   build:
     name: Deploy docs
