Standardize that HOST_* env variables are always without protocol. Add PROTOCOL env variable.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,9 @@ services:
       MYSQL_PASS:
       ELKS46_API_USER:
       ELKS46_API_KEY:
-      HOST_PUBLIC:
-      HOST_FRONTEND:
-      HOST_BACKEND:
+      HOST_PUBLIC: "${PROTOCOL}://${HOST_PUBLIC}"
+      HOST_FRONTEND: "${PROTOCOL}://${HOST_FRONTEND}"
+      HOST_BACKEND: "${PROTOCOL}://${HOST_BACKEND}"
       VIRTUAL_HOST: "${HOST_BACKEND}"
       LETSENCRYPT_HOST: "${HOST_BACKEND}"
       LETSENCRYPT_EMAIL: "${ADMIN_EMAIL}"
@@ -50,7 +50,7 @@ services:
       STRIPE_SIGNING_SECRET:
       STRIPE_CURRENCY:
       ADMIN_EMAIL:
-      CORS_ALLOWED_ORIGINS: "${HOST_FRONTEND},${HOST_PUBLIC},${HOST_BACKEND}"
+      CORS_ALLOWED_ORIGINS: "${PROTOCOL}://${HOST_FRONTEND},${PROTOCOL}://${HOST_PUBLIC},${PROTOCOL}://${HOST_BACKEND}"
       ACCESSY_CLIENT_ID:
       ACCESSY_CLIENT_SECRET:
       ACCESSY_LABACCESS_GROUP:
@@ -79,8 +79,8 @@ services:
       MAILGUN_KEY:
       MAILGUN_FROM:
       MAILGUN_TO_OVERRIDE:
-      HOST_PUBLIC:
-      HOST_FRONTEND:
+      HOST_PUBLIC: "${PROTOCOL}://${HOST_PUBLIC}"
+      HOST_FRONTEND: "${PROTOCOL}://${HOST_FRONTEND}"
     depends_on:
       - api
     networks:
@@ -104,8 +104,8 @@ services:
       MAILGUN_KEY:
       MAILGUN_FROM:
       MAILGUN_TO_OVERRIDE:
-      HOST_PUBLIC:
-      HOST_FRONTEND:
+      HOST_PUBLIC: "${PROTOCOL}://${HOST_PUBLIC}"
+      HOST_FRONTEND: "${PROTOCOL}://${HOST_FRONTEND}"
       ACCESSY_CLIENT_ID:
       ACCESSY_CLIENT_SECRET:
       ACCESSY_LABACCESS_GROUP:
@@ -124,8 +124,8 @@ services:
       context: ./public
     environment:
       APIGATEWAY: "api"
-      HOST_BACKEND:
-      HOST_PUBLIC:
+      HOST_BACKEND: "${PROTOCOL}://${HOST_BACKEND}"
+      HOST_PUBLIC: "${PROTOCOL}://${HOST_PUBLIC}"
       STRIPE_PUBLIC_KEY:
       VIRTUAL_HOST: "${HOST_PUBLIC}"
       LETSENCRYPT_HOST: "${HOST_PUBLIC}"
@@ -138,7 +138,7 @@ services:
     build:
       context: ./admin
     environment:
-      HOST_BACKEND:
+      HOST_BACKEND: "${PROTOCOL}://${HOST_BACKEND}"
       VIRTUAL_HOST: "${HOST_FRONTEND}"
       LETSENCRYPT_HOST: "${HOST_FRONTEND}"
       LETSENCRYPT_EMAIL: "${ADMIN_EMAIL}"
