--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -10,16 +10,15 @@ services:
       - logs:/work/logs
     environment:
       TEST: "true"
-      CORS_ALLOWED_ORIGINS: "http://admin,http://api,http://public"
       TEST_SERVICE_TOKEN:
 
   public:
     environment:
-      HOST_BACKEND: "http://api"
+      HOST_BACKEND: "api"
 
   admin:
     environment:
-      HOST_BACKEND: "http://api"
+      HOST_BACKEND: "api"
 
   selenium:
     image: selenium/standalone-chrome-debug
