--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -32,3 +32,5 @@ pytest-parallel<7.2.0 # https://github.com/pytest-dev/pytest/issues/10420 remove
 selenium
 faker
 dataclasses_json
+# For attaching to the test session
+debugpy
