--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -15,3 +15,4 @@ nav:
   - Home: index.md
   - Developer Guide:
       - Getting Started: dev-guide/getting-started.md
+      - Running tests: dev-guide/run-tests.md
