--- a/.github/workflows/makeradmin.yml
+++ b/.github/workflows/makeradmin.yml
@@ -2,7 +2,7 @@ name: Build and run tests for makeradmin
 
 on:
   push:
-    branches: [master, main]
+    branches: [main]
   pull_request:
     types: [synchronize, opened]
 
