--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -28,15 +28,14 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: site/
+
   deploy:
     if: ${{ github.event_name == 'push' }}
     name: Publish the documentation
-    # Add a dependency to the build job
     needs: build
 
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
-      pages: write # to deploy to Pages
+      pages: write
       id-token: write # to verify the deployment originates from an appropriate source
 
     # Deploy to the github-pages environment
@@ -44,9 +43,8 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
 
-    # Specify runner + deployment step
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
+        uses: actions/deploy-pages@v4
