Add env variable for timezone where the makerspace is (#558)
* Add env variable for timezone where the makerspace is

* Fix exception handling

* Make the timezone env choice interactive

* Fix exit code in env

* Fix copy paste misstake

* Fix comments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ services:
       FIRSTRUN_AUTO_ADMIN_LASTNAME:
       FIRSTRUN_AUTO_ADMIN_EMAIL:
       FIRSTRUN_AUTO_ADMIN_PASSWORD:
+      MAKERSPACE_LOCAL_TIMEZONE:
 
   email-dispatcher:
     image: makeradmin/api:1.0
