Add back tag to Docker image spec

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,4 +1,4 @@
-FROM node@sha256:8ec543d4795e2e85af924a24f8acb039792ae9fe8a42ad5b4bf4c277ab34b62e
+FROM node:19-alpine@sha256:8ec543d4795e2e85af924a24f8acb039792ae9fe8a42ad5b4bf4c277ab34b62e
 
 RUN apk add --no-cache tzdata
 ENV TZ=Europe/Stockholm
@@ -22,7 +22,7 @@ RUN npm run test
 RUN npm run build
 RUN echo tsc --version
 
-FROM nginx@sha256:16164a43b5faec40adb521e98272edc528e74f31c1352719132b8f7e53418d70
+FROM nginx:alpine@sha256:74175cf34632e88c6cfe206897cbfe2d2fecf9bf033c40e7f9775a3689e8adc7
 
 # Configuration file for nginx
 COPY ./docker/nginx_default_host /etc/nginx/conf.d/default.conf
