--- a/public/Dockerfile
+++ b/public/Dockerfile
@@ -1,4 +1,4 @@
-FROM python@sha256:5d769f990397afbb2aca24b0655e404c0f2806d268f454b052e81e39d87abf42
+FROM python:3.11-alpine@sha256:5d769f990397afbb2aca24b0655e404c0f2806d268f454b052e81e39d87abf42
 
 RUN apk update \
 	&& apk add \
