--- a/public/package.json
+++ b/public/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "@types/d3": "^7.4.0",
         "@types/d3-sankey": "^0.12.1",
+        "sass": "^1.83.0",
         "sass-loader": "^10.0.0",
         "ts-loader": "^9.4.2",
         "typescript": "^4.9.4",
