--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -1,6 +1,10 @@
 {
     "include": ["src/**/*.ts", "src/**/*.tsx"],
     "compilerOptions": {
+        "baseUrl": "./src",
+        "paths": {
+            "@/*": ["*"]
+        },
         "target": "es6",
         "lib": ["es5", "es6", "dom"],
         "noImplicitAny": true,
