--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -9,6 +9,7 @@ theme:
   features:
     - content.action.edit
     - navigation.footer
+    - content.code.annotate
   icon:
     repo: fontawesome/brands/github
     edit: material/pencil
