Split QR code package from bundle
This reduces the size of the bundle by 4MiB (which is only 22%!...)

--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -13,6 +13,7 @@
         "esModuleInterop": true,
         "sourceMap": true,
         "moduleResolution": "node",
+        "module": "esnext",
         "jsx": "react",
         "allowJs": true,
         "skipLibCheck": true
