--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "esbenp.prettier-vscode",
         "charliermarsh.ruff",
         "redhat.vscode-yaml",
-        "ms-python.mypy-type-checker"
+        "ms-python.mypy-type-checker",
+        "dbaeumer.vscode-eslint"
     ]
 }
